Cosmetic Text Display Changes

--- a/Multiple_Linear_Regression - Bike_Sharing - Vijay_Prasad.ipynb
+++ b/Multiple_Linear_Regression - Bike_Sharing - Vijay_Prasad.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12a69d04",
+   "id": "d88f7949",
    "metadata": {},
    "source": [
     "<hr>\n",
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00ec84a7",
+   "id": "811b27d5",
    "metadata": {},
    "source": [
     "We use Multiple Linear Regression for solving the Problem Statement which involves the following steps:\n",
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4a15a14d",
+   "id": "39589fdb",
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57969df0",
+   "id": "50b7feae",
    "metadata": {},
    "source": [
     "#### Obseravtions:\n",
@@ -997,7 +997,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7180af9e",
+   "id": "df78968d",
    "metadata": {},
    "source": [
     "Data Visualisation is the important step in understanding data.\n",
@@ -1020,7 +1020,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bd99187",
+   "id": "70df18e4",
    "metadata": {},
    "source": [
     "#### Pair Plot To Understand Multi-Collinearity"
@@ -1054,7 +1054,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "083e4e9c",
+   "id": "e4b3156e",
    "metadata": {},
    "source": [
     "#### HeatMap of Correlation Matrix of DataFrame"
@@ -1063,7 +1063,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "442ee6a7",
+   "id": "76d9bfe1",
    "metadata": {},
    "outputs": [
     {
@@ -1087,7 +1087,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9e52850",
+   "id": "f326296f",
    "metadata": {},
    "source": [
     "#### Observations:\n",
@@ -1111,7 +1111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25fcc684",
+   "id": "dc8d5dea",
    "metadata": {},
    "source": [
     "We have analysed the Numerical Variables above. Lets look at the Categorical Variables as well."
@@ -1120,7 +1120,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "564a8cdd",
+   "id": "77c166de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1175,7 +1175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de7d34f9",
+   "id": "bb76e687",
    "metadata": {},
    "source": [
     "#### Observations:\n",
@@ -1188,7 +1188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e73669a1",
+   "id": "4b745daa",
    "metadata": {},
    "source": [
     "<hr>\n",
@@ -1222,7 +1222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b01859b",
+   "id": "8d8dd159",
    "metadata": {},
    "source": [
     "#### Observations\n",
@@ -1231,7 +1231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "184ede7c",
+   "id": "d9a6315f",
    "metadata": {},
    "source": [
     "<hr>\n",
@@ -1265,7 +1265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "038a35e2",
+   "id": "6c0c3c85",
    "metadata": {},
    "source": [
     "#### Observations\n",
@@ -1275,7 +1275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44081124",
+   "id": "014b0c49",
    "metadata": {},
    "source": [
     "<hr>\n",
@@ -1286,7 +1286,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "4880ab75",
+   "id": "4e629045",
    "metadata": {},
    "outputs": [
     {
@@ -1309,7 +1309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dde946b9",
+   "id": "bb49f037",
    "metadata": {},
    "source": [
     "#### Observations\n",
@@ -1318,7 +1318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb4570d4",
+   "id": "568911ca",
    "metadata": {},
    "source": [
     "<hr>\n",
@@ -1328,7 +1328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "799a9268",
+   "id": "69d963cc",
    "metadata": {},
    "source": [
     "- The Categorical Values should be converted to Sequential Numerical Values to fit a Regression Line"
@@ -1492,7 +1492,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59231aef",
+   "id": "c912f37d",
    "metadata": {},
    "source": [
     "<hr>\n",
@@ -1598,7 +1598,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63f276b4",
+   "id": "2993ce26",
    "metadata": {},
    "source": [
     "Now, we don't need four columns. Drop the `Fall` column, as the type of 'season' can be identified with just the last three columns where — \n",
@@ -1611,7 +1611,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "722fcbff",
+   "id": "886d5396",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1625,7 +1625,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "eddab278",
+   "id": "1b5aca87",
    "metadata": {},
    "outputs": [
     {
@@ -1711,7 +1711,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d95c08a3",
+   "id": "6a68e38a",
    "metadata": {},
    "source": [
     "Now, we don't need three columns. Drop the `Clear` column, as the type of 'weathersit' can be identified with just the last two columns where — \n",
@@ -1737,7 +1737,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "fbb0ec06",
+   "id": "5c152c4d",
    "metadata": {},
    "outputs": [
     {
@@ -2078,7 +2078,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ff328b6",
+   "id": "fd0b471d",
    "metadata": {},
    "source": [
     "<hr>\n",
@@ -2088,7 +2088,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90bf3875",
+   "id": "a46a09fb",
    "metadata": {},
    "source": [
     "#### Splitting the Data into Training and Testing Sets"
@@ -2112,7 +2112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81d36ae2",
+   "id": "1661bc49",
    "metadata": {},
    "source": [
     "#### Rescaling the Features\n",
@@ -2529,7 +2529,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff7b1d9f",
+   "id": "d82acf9e",
    "metadata": {},
    "source": [
     "#### Observations:\n",
@@ -2538,7 +2538,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5661c72",
+   "id": "cabf96d5",
    "metadata": {},
    "source": [
     "#### Dividing Variables into X and Y sets"
@@ -2557,7 +2557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9012b5b",
+   "id": "feaddb8a",
    "metadata": {},
    "source": [
     "#### Building Model using Recursive Feature Elimination"
@@ -2565,7 +2565,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8641f5fc",
+   "id": "c5fe7c2c",
    "metadata": {},
    "source": [
     "To ease the feature elimination from a Data Frame having large number of Variables, we shall follow the process of RFE</br>\n",
@@ -2672,7 +2672,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "daf3b106",
+   "id": "163fb418",
    "metadata": {},
    "source": [
     "#### Building Model using StatsModel api for Statstical Details Extraction"
@@ -2852,7 +2852,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.830\n",
       "Method:                 Least Squares   F-statistic:                     207.4\n",
       "Date:                Thu, 14 Apr 2022   Prob (F-statistic):          1.00e-184\n",
-      "Time:                        08:33:54   Log-Likelihood:                 495.78\n",
+      "Time:                        08:57:48   Log-Likelihood:                 495.78\n",
       "No. Observations:                 510   AIC:                            -965.6\n",
       "Df Residuals:                     497   BIC:                            -910.5\n",
       "Df Model:                          12                                         \n",
@@ -3026,7 +3026,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef13ffc1",
+   "id": "f2a7ccd1",
    "metadata": {},
    "source": [
     "- The R-Squared and Adjusted R - Squared Values are above `80%`.\n",
@@ -3047,7 +3047,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "468c1a83",
+   "id": "79de752e",
    "metadata": {},
    "source": [
     "#### Residual Analysis on Trained Data\n"
@@ -3095,7 +3095,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cc883d3",
+   "id": "aa28f3d1",
    "metadata": {},
    "source": [
     "#### Observations:\n",
@@ -3105,7 +3105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "522cc61c",
+   "id": "7b2b4a29",
    "metadata": {},
    "source": [
     "<hr>\n",
@@ -3116,7 +3116,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "add73535",
+   "id": "aa5eac59",
    "metadata": {},
    "outputs": [
     {
@@ -3153,18 +3153,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30ca99f0",
+   "id": "e07abef0",
    "metadata": {},
    "source": [
     "#### Observation\n",
     "\n",
-    "- The above plot shows Independance of Error Terms and fullfillment of HomoScedascity as there are no patterns in the plot."
+    "- The above plot shows Independance of Error Terms and fullfillment of HomoScedascity."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "58a97054",
+   "id": "5b64d5ca",
    "metadata": {},
    "outputs": [
     {
@@ -3189,7 +3189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2cfd73e",
+   "id": "9b6d134f",
    "metadata": {},
    "source": [
     "#### Observation\n",
@@ -3199,7 +3199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8951df3",
+   "id": "ca4f31c9",
    "metadata": {},
    "source": [
     "<hr>\n",
@@ -3404,7 +3404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "316933fd",
+   "id": "40e61919",
    "metadata": {},
    "source": [
     "#### Residual Analysis on Test Data\n"
@@ -3413,7 +3413,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "aaa9ffa4",
+   "id": "4161ffed",
    "metadata": {},
    "outputs": [
     {
@@ -3452,7 +3452,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24d31bfe",
+   "id": "629c80d5",
    "metadata": {},
    "source": [
     "#### Observations:\n",
@@ -3462,7 +3462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "286b3c59",
+   "id": "484e2ceb",
    "metadata": {},
    "source": [
     "#### Model Evaluation"
@@ -3471,7 +3471,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "edb1080a",
+   "id": "8500c2dc",
    "metadata": {},
    "outputs": [
     {
@@ -3508,18 +3508,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ce569fc",
+   "id": "0af801d9",
    "metadata": {},
    "source": [
     "#### Observation\n",
     "\n",
-    "- The above plot shows Independance of Error Terms and fullfillment of HomoScedascity as there are no patterns in the plot"
+    "- The above plot shows Independance of Error Terms and fullfillment of HomoScedascity."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "5628146d",
+   "id": "f172cf9c",
    "metadata": {},
    "outputs": [
     {
@@ -3544,7 +3544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cf2ed9d",
+   "id": "9985df05",
    "metadata": {},
    "source": [
     "#### Observation\n",
@@ -3554,7 +3554,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "702a2021",
+   "id": "932f9c4b",
    "metadata": {},
    "source": [
     "## Conclusions:\n",
@@ -3595,17 +3595,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4be7b2c",
+   "id": "2da52017",
    "metadata": {},
    "source": [
     "- The Equation produced by Linear-regression model to predict the total number of users is as:\n",
     "\n",
-    "### TotalUsers = 0.246 - 0.249 * lightSnow - 0.180 * windspeed - 0.123 * hum - 0.074 * Spring - 0.064 * holiday - 0.059 * Mist + 0.019 * workingday + 0.043 * Summer + 0.049 * weekday + 0.090 * Winter + 0.232 * yr +  0.493 * temp          "
+    "___TotalUsers = 0.246 - 0.249 x lightSnow - 0.180 x windspeed - 0.123 x hum - 0.074 x Spring - 0.064 x holiday - 0.059 X Mist + 0.019 X workingday + 0.043 X Summer + 0.049 X weekday + 0.090 X Winter + 0.232 X yr +  0.493 X temp___          "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "74ec16e8",
+   "id": "78fa61b1",
    "metadata": {},
    "source": [
     "- The User Demand for the Bike Sharing Service is positively affected by `workingday, weekday, summer, winter and temp` variables.`\n",
